--- a/src/components/WeatherCard/WeatherCard.css
+++ b/src/components/WeatherCard/WeatherCard.css
@@ -1,13 +1,13 @@
-.weatherCard-title {
+.weather-card-title {
   font-size: 24px !important;
 }
 
-.weatherCard-body {
+.weather-card-body {
   font-size: 16px !important;
   text-align: center !important;
 }
 
-.weatherCard-temp {
+.weather-card-temp {
   font-size: 46px !important;
   text-align: center !important;
 }
