feat: Updated files.

--- a/src/components/WeatherCard/WeatherCard.css
+++ b/src/components/WeatherCard/WeatherCard.css
@@ -1,13 +1,13 @@
-.weather-card-title {
+.weatherCard-title {
   font-size: 24px !important;
 }
 
-.weather-card-body {
+.weatherCard-body {
   font-size: 16px !important;
   text-align: center !important;
 }
 
-.weather-card-temp {
+.weatherCard-temp {
   font-size: 46px !important;
   text-align: center !important;
 }
